--- a/back-end/Todolist-Api/src/main/resources/application.properties
+++ b/back-end/Todolist-Api/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=Todolist-Api
 spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.username=LENOVO
-spring.datasource.password=
-spring.datasource.url=jdbc:postgresql://localhost:5432/todolist_api
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/todolist_api}
 spring.datasource.type= com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
@@ -15,4 +15,4 @@ security.jwt.secret-key=3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c
 security.jwt.expiration-time=60000
 security.time.cookie=180
 security.jwt.refresh-token=180000
-origin.url=http://localhost:5173
+origin.url=${url_origin:http://localhost:5173}
