--- a/back-end/Todolist-Api/src/main/resources/application.properties
+++ b/back-end/Todolist-Api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Todolist-Api
 spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.username=${DATABASE_USERNAME:root}
-spring.datasource.password=${DATABASE_PASSWORD:root}
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/todolist_api}
+spring.datasource.username=${DATABASE_USERNAME:root123}
+spring.datasource.password=${DATABASE_PASSWORD:root123}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/todolist_api}
 spring.datasource.type= com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=20
