--- a/back-end/Todolist-Api/Dockerfile
+++ b/back-end/Todolist-Api/Dockerfile
@@ -1,7 +1,20 @@
+FROM maven:3.9.11-eclipse-temurin-17-alpine AS build
+
+WORKDIR /app
+
+COPY pom.xml .
+COPY mvnw .
+COPY .mvn .mvn
+RUN ./mvnw dependency:go-offline
+
+COPY src ./src
+
+RUN ./mvnw clean package
+
 FROM eclipse-temurin:17-jdk-alpine
 
 WORKDIR /app
 
-COPY target/Todolist-Api-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/*.jar app.jar
 
-CMD ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
