--- a/back-end/Todolist-Api/Dockerfile
+++ b/back-end/Todolist-Api/Dockerfile
@@ -9,7 +9,7 @@ RUN ./mvnw dependency:go-offline
 
 COPY src ./src
 
-RUN ./mvnw clean package
+RUN ./mvnw clean package -DskipTests
 
 FROM eclipse-temurin:17-jdk-alpine
 
