--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,16 @@ services:
       DATABASE_URL: jdbc:postgresql://todolist_db:5432/todolist_api
       url_origin: "http://localhost:3000"
     ports:
-      - "8181:8080"
+      - "8080:8080"
     networks:
       - network_todolist
 
   front-end:
+    image: todolist_frontend
     build:
       context: ./front-end/todolist
       dockerfile: Dockerfile
     container_name: Todolist_Frontend
-    environment:
-      VITE_BACKEND_URL: "http://backend:8080/"
     ports:
       - "3000:80"
     networks:
